@@ -13,8 +13,6 @@ AC_PROG_CC
 AM_PROG_CC_STDC
 AC_HEADER_STDC
 
-GNOME_COMPILE_WARNINGS(yes)
-
 dnl ******************************
 dnl pkg-config checks
 dnl ******************************
