@@ -1,3 +1,9 @@
+2002-12-27  Jens Finke  <jens@triq.net>
+
+     	* configure.in: Removed GNOME_COMPILE_WARNINGS.
+
+	* src/Makefile.am: Fixed handling of server.in.in file.
+
 2002-11-28  Jens Finke  <jens@triq.net>
 
 	* src/apotheke-directory.c: Added new mtime column, which is used
